--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -43,5 +43,6 @@
   "Add Procurement Product": "Tambah Pengadaan Produk",
   "Add Product": "Tambah Produk",
   "Confirm Transaction Data": "Konfirmasi Data Transaksi",
-  "Delete Sale": "Hapus Pesanan"
+  "View Order": "Lihat Pesanan",
+  "Delete Order": "Hapus Pesanan"
 }
